--- a/api/package.json
+++ b/api/package.json
@@ -1,6 +1,6 @@
 {
   "engines": {
-    "node": "14.x" 
+    "node": "14.x"
   },
   "dependencies": {
     "axios": "^1.6.2",
@@ -12,5 +12,13 @@
     "mongoose": "^8.0.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.23.3",
+    "@babel/node": "^7.22.19",
+    "@babel/preset-env": "^7.23.3"
+  },
+  "scripts": {
+    "start": "npx babel-node index.js"
   }
 }
